# matrix_massenger

./: .gitignore  GUIDE.md  README.md  SERVER_DEPLOYMENT_GUIDE.md  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tests.json  vite.config.ts  vitest.config.ts
docs/: auth.md  bot-bridge.md  gif-api.md  knowledge-base.md  media.md  plugin-api.md  plugins.md  room-creation.md  search.md  secure-cloud-admin-faq.md  secure-cloud.md  security.md  stickers.md  universal-inbox.md
examples/: README.md
examples/echo-bot/: README.md  package.json  tsconfig.json
examples/reminder-bot/: README.md  package.json
mobile/: .detoxrc.json  App.tsx  app.config.ts  babel.config.js  detox.config.ts  metro.config.js  package.json  tsconfig.json
mobile/docs/: authentication.md  features.md
mobile/e2e/: jest.config.js  setup.ts  smoke.e2e.ts
plugins/: echo-bot.js  echo-panel.html  registry.json
scripts/: check-sdk.mjs
src/: App.tsx  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: deployment.rs  main.rs
src/assets/: stickers.ts
src/components/: AppErrorBoundary.tsx  AutomationBuilderModal.tsx  Avatar.tsx  BotBridgeSettingsModal.tsx  CallParticipantsPanel.tsx  CallView.tsx  ChatHeader.tsx  ChatHeaderpatch.tsx  ChatList.tsx  ChatMessage.tsx  ChatPage(1).tsx  ChatPage(main).tsx  ChatPage.tsx  CreatePollModal.tsx  (+42 more)
tests/: LoginPage.test.tsx  encryptionManagement.test.ts  resolveHomeserverBaseUrl.test.js
(+127 files in other folders)
