[package]
name = "matrix-messenger"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["updater"] }
tauri-plugin-opener = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
base64 = "0.21"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
